# geotag

./: README.md  environment.yml  geotag_app.py  index.html  pyproject.toml  sentinellabel_app.py
exports/geotag_project/labels/: geotag_project_labels_20260328_0958.gpkg
