[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinellabel"
version = "0.1.0"
description = "Standalone Geospatial Satellite Imagery Labeler for ML Teams"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Mo Labs", email = "info@mo-labs.com" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic[email]>=2.5.0",
    "pystac-client>=0.7.0",
    "planetary-computer>=1.0.0",
    "rioxarray>=0.15.0",
    "geopandas>=0.14.0",
    "rasterio>=1.3.0",
    "scikit-image>=0.22.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pytest-mock"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
strict = true
